# northstar-browser-gpl

./: .gitattributes  .gitignore  .semgrepignore  AGENTS.md  CLAUDE.md  License.md  NORDSTJERNEN.md  NORTHSTAR.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  meson.build  meson_options.txt  nordstjernen.spec  northstar.spec
.claude/: settings.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: report.yml
.github/codeql/: codeql-config.yml
.github/workflows/: android-release.yml  android.yml  cleanup-logs.yml  codeql.yml  debian.yml  freebsd.yml  ios.yml  java.yml  linux.yml  macos.yml  musl.yml  netbsd.yml  windows.yml
android/: .gitignore  README.md  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  ns_jni.c  ns_jni_stub.c
android/scripts/: build-deps.sh  check-android-sources.sh  fetch-prebuilt-deps.ps1
data/: nordstjernen.desktop  northstar.desktop  org.nordstjernen.WebBrowser.metainfo.xml  org.northstar.WebBrowser.metainfo.xml  safebrowsing.list
data/baseline/: data_fixtures_basics.html.txt  data_fixtures_flex-order.html.txt  data_fixtures_geo-box.html.layout.txt  data_fixtures_geo-flex.html.layout.txt  data_fixtures_geo-grid.html.layout.txt  data_fixtures_geo-position.html.layout.txt  data_fixtures_grid-order.html.txt  data_fixtures_js-dom.html.txt  data_fixtures_table.html.txt
data/fixtures/: basics.html  flex-order.html  geo-box.html  geo-flex.html  geo-grid.html  geo-position.html  grid-order.html  js-dom.html  table.html
data/i18n/: am.lang  ar.lang  bn.lang  de.lang  el.lang  en.lang  es.lang  fa.lang  fr.lang  gu.lang  ha.lang  hi.lang  hu.lang  id.lang  it.lang  ja.lang  jv.lang  kn.lang  ko.lang  ml.lang  mr.lang  my.lang  nl.lang  pa.lang  pl.lang  pt.lang  ro.lang  ru.lang  su.lang  sw.lang  ta.lang  te.lang  th.lang  tl.lang  tr.lang  uk.lang  ur.lang  vi.lang  yo.lang  zh.lang
data/icons/: nordstjernen-icons.gresource.xml  northstar-icons.gresource.xml
data/installer/: nordstjernen.nsi  northstar.nsi
data/js/: polyfills.js  wpt-hook.js
data/msix/: AppxManifest.xml.in
data/packaging/: APKBUILD  nordstjernen.spec  northstar.spec
data/render-tests/: abs-stretch-shadow-spacing.html  aspect-ratio.html  audio.html  background-layers.html  backgrounds.html  borders-valign-text.html  box.html  container-query-eval.html  counter.html  css-five-more.html  css-media-logical-units.html  css-values-logical-color4.html  filters.html  first-line.html  flex-grow-fill.html  flex.html  flexwrap-firstletter.html  float-nowrap-indent.html  form.html  grad.html  grid-align.html  grid-markers.html  images-in-flex.html  inline-images.html  list.html  lists-legacy-attrs.html  multicol-columnwidth.html  multicol.html  object-fit.html  opacity-visibility.html  positioning.html  quotes-grid-column-flow.html  realworld-reddit-ddg.html  scope.html  selectors-color4.html  selectors.html  svg.html  table.html  tables-lists-rtl.html  (+6 more)
debian/: changelog  control  copyright  rules  watch
docs/: Alpine.md  Android.md  Benchmarking.md  CSS-compatibility.md  Controls.md  Debian.md  Embedding.md  HTML-compatibility.md  Linux.md  Nightly.md  Plan-1-0-18.md  Proxy.md  README.md  Rendering.md  Software-Architecture.md  Ubuntu.md  Windows.md  ai.md  architecture.md  building.md  extensions.md  i18n.md  iOS.md  macOS.md  media.md  opensuse.md  privacy-policy.md  quickjs-ecma-specification-compliance.md  quickjs-libjs-compare.md  single-process-mode.md  tab-isolation.md  threading.md  vendored-engine-updates.md  watchdog.md  webassembly.md  webgl.md  webgpu.md  windows-store.md  wpt-fast-scores.md  wpt-scores.md  (+1 more)
ios/: README.md
java/: .gitignore  README.md  build.gradle  settings.gradle
scripts/: build-ffmpeg-lgpl.sh  build-logo-gif.sh  build-splash-gif.sh  dev.sh  embed-text.py  fetch-wgpu-native.sh  gen-android-icon.py  gen-badge.sh  gen-idna-validity.py  gen-rgi-emoji.js  gen-splash.sh  gen-windows-icon.py  nightly-distro-build.sh  nightly-java-native.sh  nightly.sh  pack-apk.sh  pack-appimage.sh  pack-bsd.sh  pack-deb.sh  pack-linux.sh  pack-macos.sh  pack-msix.sh  pack-rpm.sh  pack-srpm.sh  pack-windows-installer.sh  pack-windows.sh  render-screenshots.sh  render-tests.sh  sample-profile.sh  smoke-windows.ps1  speedometer-bench.sh  speedometer4-bench.sh  test262-run.sh  verify-polyfills.js  verify-polyfills.py  wpt-estimate.sh  wpt-fast.sh  wpt-local.sh  wpt-run.sh  wpt-score.sh
src/: about_logo_gif.h  about_splash_gif.h  about_splash_png.h  ai.c  ai.h  anim.c  anim.h  bookmarks.c  bookmarks.h  bytecode_cache.c  bytecode_cache.h  cache.c  cache.h  camera.c  camera.h  config.c  config.h  csp.c  csp.h  css.c  css.h  css_media.c  datetime.c  datetime.h  debuglog.c  debuglog.h  dom.c  dom.h  embed_shim.c  engine.c  engine.h  eventsource.c  eventsource.h  exe-local.map  ext.c  ext.h  font.c  font.h  forms.c  forms.h  (+105 more)
src/audio/: audio.c  audio.h  main.c  minimp3_impl.c  stub.c
src/gtk/: appmain.c  macos_dock.h  macos_dock.m  meson.build  procview.c  procview.h  procwindow.c  procwindow.h
src/lexbor/: meson.build
src/lexbor/source/lexbor/core/: mraw.h
src/lexbor/source/lexbor/dom/interfaces/: comment.h
src/lexbor/source/lexbor/html/: token.h  tree.c
src/lexbor/source/lexbor/html/tokenizer/: state.c
src/lexbor/source/lexbor/unicode/: idna.c  idna.h  idna_validity.c
src/lexbor/source/lexbor/url/: url.c
src/quickjs/: .gitignore  libregexp.c  libunicode-rgi-emoji.h  libunicode.c  meson.build  quickjs-libc.c  quickjs-opcode.h  quickjs.c  quickjs.h
src/videoproc/: main.c
src/wamr/: meson.build  ns_wamr.c  ns_wamr.h
src/wamr/core/iwasm/common/: wasm_memory.c  wasm_runtime_common.c
src/wamr/core/iwasm/include/: wasm_export.h
src/wamr/core/iwasm/interpreter/: wasm_loader.c
src/wamr/core/shared/platform/linux/: platform_internal.h
src/wamr/core/shared/platform/windows/: platform_init.c
subprojects/: llama.cpp.wrap  quickjs-ng.wrap
subprojects/nestegg/: meson.build
subprojects/plmpeg/: meson.build  pl_mpeg_impl.c
subprojects/wuffs/: meson.build
(+84 files in other folders)
