option('build_date', type: 'string', value: '',
       description: 'Build date stamp shown in the About dialog (defaults to the configure-time date).')
option('gtk', type: 'feature', value: 'auto',
       description: 'Build the GTK 4 desktop shell (on by default when GTK 4 is present). Disable for an engine-only build that needs no GTK 4 toolkit at all.')
option('ipc_experiment', type: 'boolean', value: false,
       description: 'Build the HTTP-vs-binary IPC comparison renderer and benchmark (experiment branch).')
option('wasm', type: 'feature', value: 'auto',
       description: 'Build the WebAssembly JS API over the vendored WAMR interpreter (on by default; disable on platforms WAMR does not support, e.g. NetBSD).')
option('audio', type: 'feature', value: 'auto',
       description: 'Build the northstar-audio playback helper (SDL2 output + minimp3/pl_mpeg decode). Auto-detects SDL2; disable for engine-only or JNI builds without SDL2.')
